fixed IOOBE; refs #19418